iteration 3 Refactor UI and corelogic,rm old files